Fixing nav to break on tablets.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2341,7 +2341,7 @@ dd {
 .dl-horizontal dd:after {
   clear: both;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 211, ../scss/bootstrap/bootstrap/_type.scss */
   .dl-horizontal dt {
     float: left;
@@ -5238,7 +5238,7 @@ tbody.collapse.in {
   margin-bottom: 2px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 207, ../scss/bootstrap/bootstrap/_dropdowns.scss */
   .navbar-right .dropdown-menu {
     right: 0;
@@ -5875,7 +5875,7 @@ tbody.collapse.in {
 .navbar:after {
   clear: both;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 11, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar {
     border-radius: 4px;
@@ -5891,7 +5891,7 @@ tbody.collapse.in {
 .navbar-header:after {
   clear: both;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 31, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-header {
     float: left;
@@ -5920,7 +5920,7 @@ tbody.collapse.in {
 .navbar-collapse.in {
   overflow-y: auto;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 50, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-collapse {
     width: auto;
@@ -5967,7 +5967,7 @@ tbody.collapse.in {
   margin-right: -15px;
   margin-left: -15px;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 108, ../scss/bootstrap/bootstrap/_navbar.scss */
   .container > .navbar-header, .final-bottom > .navbar-header,
   .container > .navbar-collapse,
@@ -5984,7 +5984,7 @@ tbody.collapse.in {
   z-index: 1000;
   border-width: 0 0 1px;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 128, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-static-top {
     border-radius: 0;
@@ -5999,7 +5999,7 @@ tbody.collapse.in {
   left: 0;
   z-index: 1030;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 138, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-fixed-top,
   .navbar-fixed-bottom {
@@ -6036,7 +6036,7 @@ tbody.collapse.in {
 .navbar-brand > img {
   display: block;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 180, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar > .container .navbar-brand, .navbar > .final-bottom .navbar-brand, .navbar > .container-fluid .navbar-brand {
     margin-left: -15px;
@@ -6071,7 +6071,7 @@ tbody.collapse.in {
 .navbar-toggle .icon-bar + .icon-bar {
   margin-top: 4px;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 193, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-toggle {
     display: none;
@@ -6088,7 +6088,7 @@ tbody.collapse.in {
   padding-bottom: 10px;
   line-height: 20px;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   /* line 243, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-nav .open .dropdown-menu {
     position: static;
@@ -6113,7 +6113,7 @@ tbody.collapse.in {
     background-image: none;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 232, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-nav {
     float: left;
@@ -6203,7 +6203,7 @@ tbody.collapse.in {
     top: 0;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   /* line 298, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-form .form-group {
     margin-bottom: 5px;
@@ -6213,7 +6213,7 @@ tbody.collapse.in {
     margin-bottom: 0;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 286, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-form {
     width: auto;
@@ -6264,7 +6264,7 @@ tbody.collapse.in {
   margin-top: 15px;
   margin-bottom: 15px;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 359, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-text {
     float: left;
@@ -6273,7 +6273,7 @@ tbody.collapse.in {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 379, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-left {
     float: left !important;
@@ -6348,7 +6348,7 @@ tbody.collapse.in {
   background-color: #e7e7e7;
   color: #555;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   /* line 473, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #777;
@@ -6449,7 +6449,7 @@ tbody.collapse.in {
   background-color: #090909;
   color: #fff;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   /* line 607, ../scss/bootstrap/bootstrap/_navbar.scss */
   .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
     border-color: #090909;
@@ -10133,7 +10133,7 @@ body.home header {
   background-color: transparent;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   /* line 750, ../scss/_content.scss */
   .navbar-nav {
     width: 100%;
